2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglint/Makefile.am: forgot a file
 * add glint examples

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * EISMINT-3/src/Makefile.am: link to the correct libs
 * add libglint and EISMINT3 examples

2009-09-04 Magnus Hagdorn
 * added EISMINT-3 greenland example

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: handle new directories
 * libglimmer/Makefile.am: forgot a file
 * add eis driver and example setups

2009-09-04 Magnus Hagdorn
 * Makefile.am: distribute new file
 * configure.in: handle new directories
 * tests/Makefile.am: ditto
 * add EISMINT 1 and 2 tests

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: create new Makefiles

2009-09-04 Magnus Hagdorn
 * configure.in: move internal blas around to libglimmer-solve
 * libglide/Makefile.am: undo rearrangement since dep tracker is fixed
 * libglimmer/Makefile.am: blas directory is removed
 * libglimmer-solve/Makefile.am: optionally build internal blas and link to
   libglimmer-solve.a
 * libglimmer-solve/SLAP/Makefile.am: fix bug
 * move libglimmer/blas to libglimmer-solve/blas

2009-09-04 Magnus Hagdorn
 * libglide/Makefile.am: tell the f90 dependency tracker to use libtool
 * libglimmer/Makefile.am: fix bugs
 * libglimmer-solve/Makefile.am: add dependency tracker
 * scripts/f90_dependencies.py: add option to produce output for libtool

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new directory
 * bootstrap: look for libtool
 * configure.in: use libtool to build libraries
 * libglide/Makefile.am: use libtool
 * libglimmer/Makefile.am: ditto
 * move libglimmer/solve to libglimmer-solve

2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: create new Makefile
 * libglide: populate libglide

2009-09-04 Magnus Hagdorn