@@ -1,4 +1,4 @@
 graphics = scale.eps grid.eps thick_evo.eps grid_ew.eps basal_bc.eps basal_alg.eps staggered_grid.eps 
-EXTRA_DIST = grid.fig scale.fig grid_ew.dia basal_bc.fig basal_alg.dia staggered_grid.fig $(graphics)
+EXTRA_DIST = grid.fig scale.fig grid_ew.dia basal_bc.fig basal_alg.dia staggered_grid.fig
 BUILT_SOURCES = $(graphics)
 include $(top_srcdir)/doc/make_doc.rules
